--- a/project/index.html
+++ b/project/index.html
@@ -71,129 +71,6 @@
             <div class="sec3-inner" data-aos="zoom-out-left">
                 <h2>Music</h2>
                 <div class="sec3-slider">
-                    <div class="item">
-                        <div class="image">
-                            <img src="src/assets/1BlätterBraun.jpg" alt="">
-                        </div>
-                        <div class="text">
-                            <h3>Blätter Braun</h3>
-                            <p>zlato1.5, Tiyoto, Nadivi</p>
-                            <div class="streaming-services">
-                                <div class="spotify-logo">
-                                    <a class="spotify-text" href="https://open.spotify.com/track/6x82tlNHqx7Ve2QZONeTJ3?si=3e328a9a1af24844" target="_blank">
-                                        <div class="spotify-logo1"></div>
-                                        Spotify
-                                    </a>
-                                </div>
-
-                                <div class="apple-logo">
-                                    <a class="apple-text" href="https://music.apple.com/us/album/bl%C3%A4tter-braun-feat-nadivi/1659680638?i=1659680640" target="_blank">
-                                        <div class="apple-logo1"></div>
-                                        Apple Music
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="image">
-                            <img src="src/assets/2WalkingDead.jpg" alt="">
-                        </div>
-                        <div class="text">
-                            <h3>Walking Dead</h3>
-                            <p>Mäx Modestus, Alex Anders, Tiyoto</p>
-                            <div class="streaming-services">
-                                <div class="spotify-logo">
-                                    <a class="spotify-text" href="https://open.spotify.com/track/6qvsLA0ihxV6tn3JCo6O0d?si=9d28bead035049dc" target="_blank">
-                                        <div class="spotify-logo1"></div>
-                                        Spotify
-                                    </a>
-                                </div>
-
-                                <div class="apple-logo">
-                                    <a class="apple-text" href="https://music.apple.com/us/album/walking-dead-single/1646107228" target="_blank">
-                                        <div class="apple-logo1"></div>
-                                        Apple Music
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="image">
-                            <img src="src/assets/3FreiVonSorgen.jpg" alt="">
-                        </div>
-                        <div class="text">
-                            <h3>Frei von Sorgen (Album)</h3>
-                            <p>Tiyoto</p>
-                            <div class="streaming-services">
-                                <div class="spotify-logo">
-                                    <a class="spotify-text" href="https://open.spotify.com/album/2bICk7rckspcQim3yR61TI?si=2uxai6DDT5-iogsBAPAzNg" target="_blank">
-                                        <div class="spotify-logo1"></div>
-                                        Spotify
-                                    </a>
-                                </div>
-
-                                <div class="apple-logo">
-                                    <a class="apple-text" href="https://music.apple.com/us/album/frei-von-sorgen/1642323797" target="_blank">
-                                        <div class="apple-logo1"></div>
-                                        Apple Music
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/4DemonsWach.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/5RideOrDie.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/6Komisch.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/7ende.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/8eingestürzt.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/9wandAAusS.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/10zuViel.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/11schmerzhaft.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/12stressed.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/13fliegen.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/14stucked.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/15nightmare.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/16estut.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/17sxw.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/18stucked.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/19letme.jpg" alt="">
-                    </div>
-                    <div class="item">
-                        <img src="src/assets/20pieces.jpg" alt="">
-                    </div>
                 </div>
             </div>
         </div>
@@ -242,30 +119,10 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-<script src="src/js/style.js"></script>
 <script src="https://unpkg.com/rolly.js@0.2.1/dist/rolly.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-
-<script>
-
-	$('.sec3-slider').slick({
-		infinite: true,
-		slidesToShow: 3,
-		slidesToScroll: 3,
-		speed: 1500,
-		adaptiveHeight: false,
-	});
-
-	// const r = rolly({
-	// 	view: document.querySelector('.app'),
-	// 	native: true,
-	// });
-	// r.init();
-
-	AOS.init({
-		duration: 1500 // global
-	});
-</script>
+<script src="src/js/data.js"></script>
+<script src="src/js/style.js"></script>
 
 
 </body>
