--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/rolly.js@0.2.1/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/main.css">
+    <link rel="stylesheet" href="src/css/header.css">
+    <link rel="stylesheet" href="src/css/landing.css">
+    <link rel="stylesheet" href="src/css/textarea.css">
+    <link rel="stylesheet" href="src/css/songs.css">
+    <link rel="stylesheet" href="src/css/footer.css">
 </head>
 <body>
 
@@ -66,11 +71,11 @@
         </div>
     </section>
 
-    <section class="sec3" data-scene>
+    <section class="sec2" data-scene>
         <div class="container">
-            <div class="sec3-inner" data-aos="zoom-out-left">
+            <div class="sec2-inner" data-aos="zoom-out-left">
                 <h2>Music</h2>
-                <div class="sec3-slider">
+                <div class="sec2-slider">
                 </div>
             </div>
         </div>
