--- a/project/index.html
+++ b/project/index.html
@@ -70,11 +70,6 @@
     <section class="sec1" id="page-content" data-scene>
         <div class="container">
             <div class="sec1-inner">
-                <div class="text text-left" data-aos="zoom-out-right">
-                    <h3>
-                        Tiyoto, die liebe zu Kunst und den Glauben daran dass jeder Mensch die Liebe finden kann, die er möchte, sodass er keine Angst mehr hat, das Leben zu führen was ihn erfüllt.
-                    </h3>
-                </div>
                 <div class="text text-right" data-aos="zoom-out-left">
                     <p>
                         Tiyoto, die liebe zu Kunst und den Glauben daran dass jeder Mensch die Liebe finden kann, die er möchte, sodass er keine Angst mehr hat, das Leben zu führen was ihn erfüllt.
@@ -98,7 +93,7 @@
     <section class="sec2" data-scene>
         <div class="container">
             <div class="sec2-inner" data-aos="zoom-out-left">
-                <h2>Music</h2>
+                <h2>Releases</h2>
                 <div class="sec2-slider songs">
                 </div>
             </div>
