removed src folder

--- a/project/index.html
+++ b/project/index.html
@@ -14,25 +14,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/rolly.js@0.2.1/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="src/css/main.css">
-    <link rel="stylesheet" href="src/css/header.css">
-    <link rel="stylesheet" href="src/css/landing.css">
-    <link rel="stylesheet" href="src/css/textarea.css">
-    <link rel="stylesheet" href="src/css/songs.css">
-    <link rel="stylesheet" href="src/css/videos.css">
-    <link rel="stylesheet" href="src/css/footer.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/textarea.css">
+    <link rel="stylesheet" href="css/songs.css">
+    <link rel="stylesheet" href="css/videos.css">
+    <link rel="stylesheet" href="css/footer.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="https://unpkg.com/rolly.js@0.2.1/dist/rolly.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
-    <script src="src/js/songs/songSlide.js"></script>
-    <script src="src/js/songs/songData.js"></script>
-    <script src="src/js/videos/videoData.js"></script>
-    <script src="src/js/videos/videoSlide.js"></script>
+    <script src="js/songs/songSlide.js"></script>
+    <script src="js/songs/songData.js"></script>
+    <script src="js/videos/videoData.js"></script>
+    <script src="js/videos/videoSlide.js"></script>
 
-    <script src="src/js/style.js"></script>
+    <script src="js/style.js"></script>
 </head>
 <body>
 
