videos.json & songs.json

--- a/project/index.html
+++ b/project/index.html
@@ -27,10 +27,8 @@
     <script src="https://unpkg.com/rolly.js@0.2.1/dist/rolly.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
-    <script src="js/songs/songSlide.js"></script>
-    <script src="js/songs/songData.js"></script>
-    <script src="js/videos/videoData.js"></script>
-    <script src="js/videos/videoSlide.js"></script>
+    <script src="js/songSlide.js"></script>
+    <script src="js/videoSlide.js"></script>
 
     <script src="js/style.js"></script>
 </head>
