renamed style.js to main.js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script src="js/songSlide.js"></script>
         <script src="js/videoSlide.js"></script>
 
-        <script src="js/style.js"></script>
+        <script src="js/main.js"></script>
     </head>
 <body>
 
