--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
         <link rel="stylesheet" href="https://unpkg.com/rolly.js@0.2.1/css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
+        <link rel="stylesheet" href="assets/fonts/butler/Butler_Stencil_Webfont/stylesheet.css">
+        <link rel="stylesheet" href="assets/fonts/butler/Butler_Webfont/stylesheet.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/landing.css">
