header responsiveness finish

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <h1 class="mobile-title mobile-media">Tiyoto</h1>
                         </div>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                            <div class="navbar-nav navbar-align nav-items">
+                            <div class="navbar-nav navbar-align nav-items desktop-view">
                                 <div class="left-menu nav-fill">
                                     <ul>
                                         <li><a class="nav-link text-light" href="https://open.spotify.com/artist/1WudhOnkqlXOpEXgFLKgqJ?si=GGGnYIyPTympbJsdmGrFYg&nd=1" target="_blank">SPOTIFY</a></li>
@@ -65,6 +65,21 @@
                                         <li><a class="nav-link text-light" href="https://www.tiktok.com/@tiyoto_art" target="_blank">TIK TOK</a></li>
                                     </ul>
                                 </div>
+                            </div>
+                            <div class="navbar-nav nav-items mobile-view">
+                                <ul>
+                                    <li><a class="nav-link text-light" href="https://open.spotify.com/artist/1WudhOnkqlXOpEXgFLKgqJ?si=GGGnYIyPTympbJsdmGrFYg&nd=1" target="_blank">SPOTIFY</a></li>
+                                    <br>
+                                    <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/tiyoto/1438147188" target="_blank">APPLE MUSIC</a></li>
+                                    <br>
+                                    <li><a class="nav-link text-light" href="https://soundcloud.com/tiyoto?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">SOUNDCLOUD</a></li>
+                                    <br>
+                                    <li><a class="nav-link text-light" href="https://www.instagram.com/tiyoto_art/" target="_blank">INSTAGRAM</a></li>
+                                    <br>
+                                    <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCzyoaOmYg20twRckZicOR9g" target="_blank">YOUTUBE</a></li>
+                                    <br>
+                                    <li><a class="nav-link text-light" href="https://www.tiktok.com/@tiyoto_art" target="_blank">TIK TOK</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -97,7 +112,7 @@
 
             <section class="secVid" data-scene>
                 <div class="container">
-                    <div class="secVid-inner" data-aos="zoom-out-left">
+                    <div class="secVid-inner" data-aos="zoom-in-down">
                         <h2>Musikvideos</h2>
                         <div class="video-box"></div>
                         <div class="secVid-slider videos">
@@ -108,7 +123,7 @@
 
             <section class="sec2" data-scene>
                 <div class="container">
-                    <div class="sec2-inner" data-aos="zoom-out-left">
+                    <div class="sec2-inner" data-aos="zoom-in-up">
                         <h2>Releases</h2>
                         <div class="sec2-slider songs">
                         </div>
@@ -118,7 +133,7 @@
 
             <footer data-scene>
                 <div class="container">
-                    <div class="footer-inner" data-aos="zoom-out-up">
+                    <div class="footer-inner" data-aos="zoom-in-up">
                         <div class="col">
                             <div class="text">
                                 <h2>TIYOTO</h2>
@@ -149,7 +164,7 @@
             </footer>
 
             <div class="copyright">
-                <div class="container" data-aos="zoom-out-up" data-aos-offset="0">
+                <div class="container" data-aos="zoom-in-up" data-aos-offset="0">
                     <p>© 2022 Tiyoto | All Rights Reserved</p>
                     <p>Design: Leonardo Jülch</p>
                 </div>
