--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 </div>
             </section>
 
-            <section class="sec1" id="page-content" data-scene>
+            <section class="sec1 landing-text" id="page-content" data-scene>
                 <div class="container">
                     <div class="sec1-inner">
-                        <div class="text landing-text text-right" data-aos="zoom-out-left">
+                        <div class="text text-right" data-aos="zoom-out-left">
                             <p>
                                 Tiyoto, die liebe zu Kunst und den Glauben daran dass jeder Mensch die Liebe finden kann, die er möchte, sodass er keine Angst mehr hat, das Leben zu führen was ihn erfüllt.
                             </p>
