--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tiyoto</title>
 
+        <link rel="icon" type="image/x-icon" href="assets/img/background.jpg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -46,7 +47,7 @@
                         <button class="ham-btn navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div>
+                        <div class="mobile-logo">
                             <h1 class="mobile-title mobile-media">Tiyoto</h1>
                         </div>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -93,7 +94,7 @@
                         <p>Stay Alive und mach was du liebst, egal was wer anders sagt.</p>
                     </div>
                     <div class="go-to-helper">
-                        <a href="#" class="go-to"></a>
+                        <a href="#" class="go-to go-to-mobile"></a>
                     </div>
                 </div>
             </section>
@@ -110,7 +111,7 @@
                 </div>
             </section>
 
-            <section class="secVid" data-scene>
+            <section class="secVid" id="sec-vid-helper" data-scene>
                 <div class="container">
                     <div class="secVid-inner" data-aos="zoom-in-down">
                         <h2>Musikvideos</h2>
