--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                 </div>
             </section>
 
-            <section class="secVid" id="sec-vid-helper" data-scene>
+            <section class="secVid"  data-scene>
                 <div class="container">
                     <div class="secVid-inner" data-aos="zoom-in-down">
                         <h2>Musikvideos</h2>
-                        <div class="video-box"></div>
+                        <div class="video-box" id="sec-vid-helper"></div>
                         <div class="secVid-slider videos">
                         </div>
                     </div>
