--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 </div>
             </section>
 
-            <section class="sec1 landing-text" id="page-content" data-scene>
-                <div class="container">
+            <section class="sec1" id="page-content" data-scene>
+                <div class="container landing-text">
                     <div class="sec1-inner">
                         <div class="text text-right" data-aos="zoom-out-left">
                             <p>
@@ -152,7 +152,7 @@
                             <ul>
                                 <li><a href="https://www.instagram.com/tiyoto_art/" target="_blank">Instagram</a></li>
                                 <li><a href="https://www.tiktok.com/@tiyoto_art" target="_blank">Tik Tok</a></li>
-                                <li><p>Business Mail: tiyotoart@gmail.com</p></li>
+                                <li><a href="mailto:tiyotoart@gmail.com">Business Mail: tiyotoart@gmail.com</a></li>
                             </ul>
                         </div>
                         <div class="col">
