--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="sec1-inner">
                         <div class="text text-right" data-aos="zoom-out-left">
                             <p>
-                                Tiyoto, die liebe zu Kunst und den Glauben daran dass jeder Mensch die Liebe finden kann, die er möchte, sodass er keine Angst mehr hat, das Leben zu führen was ihn erfüllt.
+                                Tiyoto, die Liebe zu Kunst und den Glauben daran, dass jeder Mensch die Liebe finden kann, die er möchte, sodass er keine Angst mehr hat, das Leben zu führen, was ihn erfüllt.
                             </p>
                         </div>
                     </div>
