--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Tiyoto</title>
 
         <link rel="icon" type="image/x-icon" href="assets/img/background.jpg">
+        <link rel="icon" type="image/x-icon" href="assets/img/profile2Leo.JPG">
+        <link rel="icon" type="image/x-icon" href="assets/img/profile3Leo.JPG">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -31,10 +33,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
         <script src="https://unpkg.com/rolly.js@0.2.1/dist/rolly.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.7/js/tether.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tether@1.4.0/dist/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 
         <script src="js/songSlide.js"></script>
         <script src="js/videoSlide.js"></script>
-
         <script src="js/main.js"></script>
     </head>
     <body>
@@ -48,38 +52,38 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="mobile-logo">
-                            <h1 class="mobile-title mobile-media">Tiyoto</h1>
+                            <h1 class="mobile-title mobile-media">zlato 1.5</h1>
                         </div>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav navbar-align nav-items desktop-view">
                                 <div class="left-menu nav-fill">
                                     <ul>
-                                        <li><a class="nav-link text-light" href="https://open.spotify.com/artist/1WudhOnkqlXOpEXgFLKgqJ?si=GGGnYIyPTympbJsdmGrFYg&nd=1" target="_blank">SPOTIFY</a></li>
-                                        <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/tiyoto/1438147188" target="_blank">APPLE MUSIC</a></li>
-                                        <li><a class="nav-link text-light" href="https://soundcloud.com/tiyoto?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">SOUNDCLOUD</a></li>
+                                        <li><a class="nav-link text-light" href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">SPOTIFY</a></li>
+                                        <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">APPLE MUSIC</a></li>
+                                        <li><a class="nav-link text-light" href="https://soundcloud.com/zlato15" target="_blank">SOUNDCLOUD</a></li>
                                     </ul>
                                 </div>
                                 <div class="right-menu">
                                     <ul>
-                                        <li><a class="nav-link text-light" href="https://www.instagram.com/tiyoto_art/" target="_blank">INSTAGRAM</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCzyoaOmYg20twRckZicOR9g" target="_blank">YOUTUBE</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.tiktok.com/@tiyoto_art" target="_blank">TIK TOK</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.instagram.com/zlato1.5/" target="_blank">INSTAGRAM</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg" target="_blank">YOUTUBE</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIK TOK</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="navbar-nav nav-items mobile-view">
                                 <ul>
-                                    <li><a class="nav-link text-light" href="https://open.spotify.com/artist/1WudhOnkqlXOpEXgFLKgqJ?si=GGGnYIyPTympbJsdmGrFYg&nd=1" target="_blank">SPOTIFY</a></li>
+                                    <li><a class="nav-link text-light" href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">SPOTIFY</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/tiyoto/1438147188" target="_blank">APPLE MUSIC</a></li>
+                                    <li><a class="nav-link text-light" href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">APPLE MUSIC</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://soundcloud.com/tiyoto?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">SOUNDCLOUD</a></li>
+                                    <li><a class="nav-link text-light" href="https://soundcloud.com/zlato15" target="_blank">SOUNDCLOUD</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.instagram.com/tiyoto_art/" target="_blank">INSTAGRAM</a></li>
+                                    <li><a class="nav-link text-light" href="https://www.instagram.com/zlato1.5/" target="_blank">INSTAGRAM</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCzyoaOmYg20twRckZicOR9g" target="_blank">YOUTUBE</a></li>
+                                    <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg" target="_blank">YOUTUBE</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.tiktok.com/@tiyoto_art" target="_blank">TIK TOK</a></li>
+                                    <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIK TOK</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -90,8 +94,8 @@
             <section class="banner" data-scene>
                 <div class="container">
                     <div class="text landing-text" data-aos="zoom-out" data-aos-delay="1000">
-                        <h1>TIYOTO</h1>
-                        <p>Stay Alive und mach was du liebst, egal was wer anders sagt.</p>
+                        <h1>zlato 1.5</h1>
+                        <p>Immer auf der Suche nach dem Sinn. Nach was suchst du?</p>
                     </div>
                     <div class="go-to-helper">
                         <a href="#" class="go-to go-to-mobile"></a>
@@ -104,13 +108,14 @@
                     <div class="sec1-inner">
                         <div class="text text-right" data-aos="zoom-out-left">
                             <p>
-                                Tiyoto, die Liebe zu Kunst und den Glauben daran, dass jeder Mensch die Liebe finden kann, die er möchte, sodass er keine Angst mehr hat, das Leben zu führen, was ihn erfüllt.
+                                Meine Songs sind Momentaufnahmen aus meinem Leben. Das ist mein Weg mich auszudrücken und das beste daran ist, dass ich damit noch Menschen begeistern kann.
                             </p>
                         </div>
                     </div>
                 </div>
             </section>
 
+            <!--
             <section class="secVid"  data-scene>
                 <div class="container">
                     <div class="secVid-inner" data-aos="zoom-in-down">
@@ -121,6 +126,7 @@
                     </div>
                 </div>
             </section>
+            -->
 
             <section class="sec2" data-scene>
                 <div class="container">
@@ -142,31 +148,51 @@
                         </div>
                         <div class="col">
                             <ul>
-                                <li><a href="https://open.spotify.com/artist/1WudhOnkqlXOpEXgFLKgqJ?si=GGGnYIyPTympbJsdmGrFYg&nd=1" target="_blank">Spotify</a></li>
-                                <li><a href="https://music.apple.com/us/artist/tiyoto/1438147188" target="_blank">Apple Music</a></li>
-                                <li><a href="https://soundcloud.com/tiyoto?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Soundcloud</a></li>
-                                <li><a href="https://www.youtube.com/channel/UCzyoaOmYg20twRckZicOR9g" target="_blank">Youtube</a></li>
+                                <li><a href="https://open.spotify.com/intl-de/artist/2q1WHufNKknvEDy8loCR4O" target="_blank">Spotify</a></li>
+                                <li><a href="https://music.apple.com/us/artist/zlato1-5/1659210545" target="_blank">Apple Music</a></li>
+                                <li><a href="https://soundcloud.com/zlato15" target="_blank">Soundcloud</a></li>
+                                <li><a href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg" target="_blank">Youtube</a></li>
                             </ul>
                         </div>
                         <div class="col">
                             <ul>
-                                <li><a href="https://www.instagram.com/tiyoto_art/" target="_blank">Instagram</a></li>
-                                <li><a href="https://www.tiktok.com/@tiyoto_art" target="_blank">Tik Tok</a></li>
-                                <li><a href="mailto:tiyotoart@gmail.com">Business Mail: tiyotoart@gmail.com</a></li>
+                                <li><a href="https://www.instagram.com/zlato1.5/" target="_blank">Instagram</a></li>
+                                <li><a href="https://www.tiktok.com/@zlato1.5" target="_blank">Tik Tok</a></li>
+                                <li><a href="zlato1.5musik@gmail.com">Business Mail: zlato1.5musik@gmail.com</a></li>
                             </ul>
                         </div>
                         <div class="col">
                             <ul>
-                                <li><a href="#">Impressum</a></li>
+                                <li><a href="#" data-toggle="modal" data-target="#exampleModal">Impressum</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </footer>
 
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Modal body text goes here.
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="copyright">
                 <div class="container" data-aos="zoom-in-up" data-aos-offset="0">
-                    <p>© 2022 Tiyoto | All Rights Reserved</p>
+                    <p>© 2023 GRB Records | All Rights Reserved</p>
                     <p>Design: Leonardo Jülch</p>
                 </div>
             </div>
