--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tiyoto</title>
+        <title>zlato1.5</title>
 
         <link rel="icon" type="image/x-icon" href="assets/img/background.jpg">
         <link rel="icon" type="image/x-icon" href="assets/img/profile2Leo.JPG">
@@ -107,9 +107,23 @@
                 <div class="container landing-text">
                     <div class="sec1-inner">
                         <div class="text text-right" data-aos="zoom-out-left">
-                            <p>
-                                Meine Songs sind Momentaufnahmen aus meinem Leben. Das ist mein Weg mich auszudrücken und das beste daran ist, dass ich damit noch Menschen begeistern kann.
-                            </p>
+                            <img class="grb-logo" src="assets/img/grb%20Logo.jpeg" alt="logo">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="secVid" data-scene>
+                <div class="container">
+                    <h2>Next Up</h2>
+                    <div class="sec1-inner" data-aos="zoom-in-down">
+                        <div class="next-up-container row">
+                            <div class="col-12 pic-container">
+                                <img class="next-up-pic" src="assets/img/runnerSoon.jpg" alt="">
+                            </div>
+                            <div class="col-12">
+                                <p class="release-date">Release Date: <br>08 Dezember 2024</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -143,7 +157,7 @@
                     <div class="footer-inner" data-aos="zoom-in-up">
                         <div class="col">
                             <div class="text">
-                                <h2>TIYOTO</h2>
+                                <h2>zlato 1.5</h2>
                             </div>
                         </div>
                         <div class="col">
@@ -159,11 +173,6 @@
                                 <li><a href="https://www.instagram.com/zlato1.5/" target="_blank">Instagram</a></li>
                                 <li><a href="https://www.tiktok.com/@zlato1.5" target="_blank">Tik Tok</a></li>
                                 <li><a href="zlato1.5musik@gmail.com">Business Mail: zlato1.5musik@gmail.com</a></li>
-                            </ul>
-                        </div>
-                        <div class="col">
-                            <ul>
-                                <li><a href="#" data-toggle="modal" data-target="#exampleModal">Impressum</a></li>
                             </ul>
                         </div>
                     </div>
