fix: header, add presave link

--- a/index.html
+++ b/index.html
@@ -116,13 +116,16 @@
             <section class="secVid" data-scene>
                 <div class="container">
                     <h2>Next Up</h2>
-                    <div class="sec1-inner" data-aos="zoom-in-down">
+                    <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
                         <div class="next-up-container row">
                             <div class="col-12 pic-container">
                                 <img class="next-up-pic" src="assets/img/runnerSoon.jpg" alt="">
                             </div>
                             <div class="col-12">
-                                <p class="release-date">Release Date: <br>08 Dezember 2024</p>
+                                <p class="release-date mb-0">Release Date: <br>08 Dezember 2024</p>
+                            </div>
+                            <div class="presave">
+                                <a href="https://distrokid.com/hyperfollow/zlato15/runner-2"><i class="fa-solid fa-link"></i> Click here to Presave</a>
                             </div>
                         </div>
                     </div>
