--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <section class="secVid" data-scene>
                 <div class="container">
-                    <h2>Next Up</h2>
+                    <h2>Today 23:59</h2>
                     <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
                         <div class="next-up-container row">
                             <div class="col-12 pic-container">
