--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
 
             <section class="secVid" data-scene>
                 <div class="container">
+                    <h2>OUT NOW</h2>
+                    <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
+                        <div class="next-up-container row">
+                            <div class="col-12 pic-container">
+                                <img class="next-up-pic" src="assets/img/runnerSoon.jpg" alt="">
+                            </div>
+                            <div class="presave spotify-logo d-flex justify-content-around pt-4 fs-1">
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/album/0IbVICgu43UNZZkwMvoIJh"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                                <a title="Apple Music" href="https://music.apple.com/us/artist/zlato1-5/1659210545"><i class="fa-solid fa-music out-now-hover-apple"></i></a>
+                                <a title="Deezer" href="https://www.deezer.com/en/album/519056152"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
+                                <a title="Youtube" href="https://www.youtube.com/watch?v=MVzDsmBttGY"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!--
+            <section class="secVid" data-scene>
+                <div class="container">
                     <h2>Today 23:59</h2>
                     <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
                         <div class="next-up-container row">
@@ -132,7 +152,7 @@
                 </div>
             </section>
 
-            <!--
+
             <section class="secVid"  data-scene>
                 <div class="container">
                     <div class="secVid-inner" data-aos="zoom-in-down">
