--- a/index.html
+++ b/index.html
@@ -112,58 +112,57 @@
                     </div>
                 </div>
             </section>
-
-            <section class="secVid" data-scene>
-                <div class="container">
-                    <h2>OUT NOW</h2>
-                    <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
-                        <div class="next-up-container row">
-                            <div class="col-12 pic-container">
-                                <img class="next-up-pic" src="assets/img/runnerSoon.jpg" alt="">
-                            </div>
-                            <div class="presave spotify-logo d-flex justify-content-around pt-4 fs-1">
-                                <a title="Spotify" href="https://open.spotify.com/intl-de/album/0IbVICgu43UNZZkwMvoIJh"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
-                                <a title="Apple Music" href="https://music.apple.com/us/artist/zlato1-5/1659210545"><i class="fa-solid fa-music out-now-hover-apple"></i></a>
-                                <a title="Deezer" href="https://www.deezer.com/en/album/519056152"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
-                                <a title="Youtube" href="https://www.youtube.com/watch?v=MVzDsmBttGY"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
             <!--
+                        <section class="secVid" data-scene>
+                            <div class="container">
+                                <h2>OUT NOW</h2>
+                                <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
+                                    <div class="next-up-container row">
+                                        <div class="col-12 pic-container">
+                                            <img class="next-up-pic" src="assets/img/runnerSoon.jpg" alt="">
+                                        </div>
+                                        <div class="presave spotify-logo d-flex justify-content-around pt-4 fs-1">
+                                            <a title="Spotify" href="https://open.spotify.com/intl-de/album/0IbVICgu43UNZZkwMvoIJh"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                                            <a title="Apple Music" href="https://music.apple.com/us/artist/zlato1-5/1659210545"><i class="fa-solid fa-music out-now-hover-apple"></i></a>
+                                            <a title="Deezer" href="https://www.deezer.com/en/album/519056152"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
+                                            <a title="Youtube" href="https://www.youtube.com/watch?v=MVzDsmBttGY"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+
+                        <section class="secVid"  data-scene>
+                            <div class="container">
+                                <div class="secVid-inner" data-aos="zoom-in-down">
+                                    <h2>Musikvideos</h2>
+                                    <div class="video-box" id="sec-vid-helper"></div>
+                                    <div class="secVid-slider videos">
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+
+                        -->
+
             <section class="secVid" data-scene>
                 <div class="container">
                     <h2>Today 23:59</h2>
                     <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
                         <div class="next-up-container row">
                             <div class="col-12 pic-container">
-                                <img class="next-up-pic" src="assets/img/runnerSoon.jpg" alt="">
+                                <img class="next-up-pic" src="assets/img/brb-cover.jpg" alt="">
                             </div>
                             <div class="col-12">
-                                <p class="release-date mb-0">Release Date: <br>08 Dezember 2024</p>
+                                <p class="release-date mb-0">Release Date: <br>12 Januar 2024</p>
                             </div>
                             <div class="presave">
-                                <a href="https://distrokid.com/hyperfollow/zlato15/runner-2"><i class="fa-solid fa-link"></i> Click here to Presave</a>
+                                <a href="https://distrokid.com/hyperfollow/zlato15/brb"><i class="fa-solid fa-link"></i> Click here to Presave</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-
-
-            <section class="secVid"  data-scene>
-                <div class="container">
-                    <div class="secVid-inner" data-aos="zoom-in-down">
-                        <h2>Musikvideos</h2>
-                        <div class="video-box" id="sec-vid-helper"></div>
-                        <div class="secVid-slider videos">
-                        </div>
-                    </div>
-                </div>
-            </section>
-            -->
 
             <section class="sec2" data-scene>
                 <div class="container">
