--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                                 <div class="right-menu">
                                     <ul>
                                         <li><a class="nav-link text-light" href="https://www.instagram.com/zlato1.5/" target="_blank">INSTAGRAM</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg" target="_blank">YOUTUBE</a></li>
-                                        <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIK TOK</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCK_HqCtD0-UPrQY-oI0XIdw" target="_blank">YOUTUBE</a></li>
+                                        <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIKTOK</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -83,7 +83,7 @@
                                     <br>
                                     <li><a class="nav-link text-light" href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg" target="_blank">YOUTUBE</a></li>
                                     <br>
-                                    <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIK TOK</a></li>
+                                    <li><a class="nav-link text-light" href="https://www.tiktok.com/@zlato1.5" target="_blank">TIKTOK</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -113,24 +113,6 @@
                 </div>
             </section>
             <!--
-                        <section class="secVid" data-scene>
-                            <div class="container">
-                                <h2>OUT NOW</h2>
-                                <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
-                                    <div class="next-up-container row">
-                                        <div class="col-12 pic-container">
-                                            <img class="next-up-pic" src="assets/img/runnerSoon.jpg" alt="">
-                                        </div>
-                                        <div class="presave spotify-logo d-flex justify-content-around pt-4 fs-1">
-                                            <a title="Spotify" href="https://open.spotify.com/intl-de/album/0IbVICgu43UNZZkwMvoIJh"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
-                                            <a title="Apple Music" href="https://music.apple.com/us/artist/zlato1-5/1659210545"><i class="fa-solid fa-music out-now-hover-apple"></i></a>
-                                            <a title="Deezer" href="https://www.deezer.com/en/album/519056152"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
-                                            <a title="Youtube" href="https://www.youtube.com/watch?v=MVzDsmBttGY"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
 
                         <section class="secVid"  data-scene>
                             <div class="container">
@@ -143,9 +125,7 @@
                             </div>
                         </section>
 
-                        -->
-
-            <section class="secVid" data-scene>
+                                    <section class="secVid" data-scene>
                 <div class="container">
                     <h2>Today 23:59</h2>
                     <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
@@ -158,6 +138,27 @@
                             </div>
                             <div class="presave">
                                 <a href="https://distrokid.com/hyperfollow/zlato15/brb"><i class="fa-solid fa-link"></i> Click here to Presave</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+                        -->
+
+            <section class="secVid" data-scene>
+                <div class="container">
+                    <h2>OUT NOW</h2>
+                    <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
+                        <div class="next-up-container row">
+                            <div class="col-12 pic-container">
+                                <img class="next-up-pic" src="assets/img/brb-cover.jpg" alt="">
+                            </div>
+                            <div class="presave spotify-logo d-flex justify-content-around pt-4 fs-1">
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/album/2gVgf7oqDtIyFaaisHycIk?si=AuwQmVXKQIOyf2eAUPodrw"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                                <a title="Apple Music" href="https://music.apple.com/us/artist/zlato1-5/1659210545"><i class="fa-solid fa-music out-now-hover-apple"></i></a>
+                                <a title="Deezer" href="https://deezer.page.link/J9HZUKrvXMv9MKMG7"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
+                                <a title="Youtube" href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +194,7 @@
                         <div class="col">
                             <ul>
                                 <li><a href="https://www.instagram.com/zlato1.5/" target="_blank">Instagram</a></li>
-                                <li><a href="https://www.tiktok.com/@zlato1.5" target="_blank">Tik Tok</a></li>
+                                <li><a href="https://www.tiktok.com/@zlato1.5" target="_blank">TikTok</a></li>
                                 <li><a href="zlato1.5musik@gmail.com">Business Mail: zlato1.5musik@gmail.com</a></li>
                             </ul>
                         </div>
