--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
             </section>
 
-                        -->
+                  -->
 
             <section class="secVid" data-scene>
                 <div class="container">
@@ -152,13 +152,13 @@
                     <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
                         <div class="next-up-container row">
                             <div class="col-12 pic-container">
-                                <img class="next-up-pic" src="assets/img/brb-cover.jpg" alt="">
+                                <img class="next-up-pic" src="assets/img/wasteland-cover.jpg" alt="">
                             </div>
                             <div class="presave spotify-logo d-flex justify-content-around pt-4 fs-1">
-                                <a title="Spotify" href="https://open.spotify.com/intl-de/album/2gVgf7oqDtIyFaaisHycIk?si=AuwQmVXKQIOyf2eAUPodrw"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/track/0xgbtoyq8wofT1CVqfIoTU?si=bf58c5bf42964223"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
                                 <a title="Apple Music" href="https://music.apple.com/us/artist/zlato1-5/1659210545"><i class="fa-solid fa-music out-now-hover-apple"></i></a>
-                                <a title="Deezer" href="https://deezer.page.link/J9HZUKrvXMv9MKMG7"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
-                                <a title="Youtube" href="https://www.youtube.com/channel/UCJhUjLDNfRbR4g4ju67v9hg"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
+                                <a title="Deezer" href="https://deezer.page.link/XyACwztnaRE73SRk9"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
+                                <a title="Youtube" href="https://www.youtube.com/watch?v=gPMAhtBi528"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
                             </div>
                         </div>
                     </div>
