--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                     <div class="sec1-inner sec-vid-inner" data-aos="zoom-in-down">
                         <div class="next-up-container row">
                             <div class="col-12 pic-container">
-                                <img class="next-up-pic" src="assets/img/wasteland-cover.jpg" alt="">
+                                <img class="next-up-pic" src="assets/img/stratosphäre-cover.jpg" alt="">
                             </div>
                             <div class="presave spotify-logo d-flex justify-content-around pt-4 fs-1">
-                                <a title="Spotify" href="https://open.spotify.com/intl-de/track/0xgbtoyq8wofT1CVqfIoTU?si=bf58c5bf42964223"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
+                                <a title="Spotify" href="https://open.spotify.com/intl-de/track/4LlUXKlls2DoTPMd6V5PCe?si=486b5454d43140e2"><i class="fa-brands fa-spotify out-now-hover-spotify"></i></a>
                                 <a title="Apple Music" href="https://music.apple.com/us/artist/zlato1-5/1659210545"><i class="fa-solid fa-music out-now-hover-apple"></i></a>
-                                <a title="Deezer" href="https://deezer.page.link/XyACwztnaRE73SRk9"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
-                                <a title="Youtube" href="https://www.youtube.com/watch?v=gPMAhtBi528"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
+                                <a title="Deezer" href="https://deezer.page.link/2ttCYhdQdvNNwGHb8"><i class="fa-brands fa-deezer out-now-hover-deezer"></i></a>
+                                <a title="Youtube" href="https://www.youtube.com/watch?v=FdhjPoYcFvc"><i class="fa-brands fa-youtube out-now-hover-youtube"></i></a>
                             </div>
                         </div>
                     </div>
